--- a/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
+++ b/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
@@ -1,17 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="FnB-1o-m6P">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IZJ-mu-5dT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation View Controller-->
+        <scene sceneID="43O-xU-WYM">
+            <objects>
+                <viewController id="Ckw-Us-zZL" customClass="NavigationViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4dc-TS-DOY"/>
+                        <viewControllerLayoutGuide type="bottom" id="hkj-qX-zRC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YuB-jD-8kB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hOR-ri-vjC">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="Wpe-p3-33s" kind="embed" identifier="FlutterViewControllerNavigationSegue" id="E13-vs-4CQ"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="lFL-ad-Gc8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FOv-VV-j7M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2037.5999999999999" y="-262.21889055472263"/>
+        </scene>
         <!--Main View Controller-->
         <scene sceneID="nCd-Pe-nwC">
             <objects>
-                <viewController id="FnB-1o-m6P" customClass="MainViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainView" id="FnB-1o-m6P" customClass="MainViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MCZ-qn-U8U"/>
                         <viewControllerLayoutGuide type="bottom" id="T9c-61-ZEO"/>
@@ -53,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YK3-cu-zew" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1858" y="211"/>
+            <point key="canvasLocation" x="-1982" y="415"/>
         </scene>
         <!--Flutter View Controller-->
         <scene sceneID="QiU-td-PNw">
@@ -67,10 +95,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
+                    <navigationItem key="navigationItem" id="8Va-r4-P5B"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nvJ-Dz-mOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1060" y="76"/>
+            <point key="canvasLocation" x="-1295" y="264"/>
         </scene>
         <!--Native View Controller-->
         <scene sceneID="W4R-Y9-Lec">
@@ -91,7 +120,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="264"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flutter button tapped 0 times." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ2-AA-Riy" userLabel="IncremetLabel">
-                                                <rect key="frame" x="73" y="122" width="229" height="21"/>
+                                                <rect key="frame" x="73.5" y="122.5" width="228.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -106,7 +135,7 @@
                                         <rect key="frame" x="0.0" y="264" width="375" height="70"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0h-kv-J7E">
-                                                <rect key="frame" x="20" y="14" width="48" height="36"/>
+                                                <rect key="frame" x="20" y="14" width="47.5" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -158,7 +187,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YRn-0M-UIv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1090.4000000000001" y="489.3553223388306"/>
+            <point key="canvasLocation" x="-1295" y="622"/>
+        </scene>
+        <!--Flutter View Controller-->
+        <scene sceneID="MpE-st-iOV">
+            <objects>
+                <viewController id="Wpe-p3-33s" customClass="FlutterViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RQW-SD-ik5"/>
+                        <viewControllerLayoutGuide type="bottom" id="ohc-a4-zib"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IRT-wx-P1Q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ph1-lR-1Ti" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1167" y="-262"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="UIA-E1-Fwi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IZJ-mu-5dT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="L5S-pU-O96">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ckw-Us-zZL" kind="relationship" relationship="rootViewController" id="CT0-AV-Xb1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MTW-ed-R0i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2976.8000000000002" y="-262.21889055472263"/>
         </scene>
     </scenes>
     <resources>
