--- a/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
+++ b/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
@@ -31,6 +31,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="lFL-ad-Gc8"/>
+                    <connections>
+                        <segue destination="IfX-98-7j6" kind="show" identifier="FullFlutterViewSegue" animates="NO" id="JnC-dc-GDH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FOv-VV-j7M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -190,6 +193,33 @@
             <point key="canvasLocation" x="-1295" y="622"/>
         </scene>
         <!--Flutter View Controller-->
+        <scene sceneID="YHb-Dj-an4">
+            <objects>
+                <viewController id="IfX-98-7j6" customClass="FlutterViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FvL-oe-Gxj"/>
+                        <viewControllerLayoutGuide type="bottom" id="fEc-Ci-n8p"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qTC-tL-MWe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YKu-xh-zGl">
+                                <rect key="frame" x="139" y="20" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3xC-Dd-JQh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1052" y="-879"/>
+        </scene>
+        <!--Flutter View Controller-->
         <scene sceneID="MpE-st-iOV">
             <objects>
                 <viewController id="Wpe-p3-33s" customClass="FlutterViewController" sceneMemberID="viewController">
@@ -205,7 +235,145 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ph1-lR-1Ti" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1167" y="-262"/>
+            <point key="canvasLocation" x="-1004" y="-213"/>
+        </scene>
+        <!--Full Native View Controller-->
+        <scene sceneID="FU5-5C-Psk">
+            <objects>
+                <viewController storyboardIdentifier="FullNativeView" id="FuD-Sm-JFt" customClass="FullNativeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7xj-FX-7de"/>
+                        <viewControllerLayoutGuide type="bottom" id="klY-KJ-byY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rWi-Tg-SeV" userLabel="ParentView">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XxV-J3-arx">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" restorationIdentifier="PVController" translatesAutoresizingMaskIntoConstraints="NO" id="2tU-yW-uTb" userLabel="Top">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="597"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Button tapped 0 times." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mlo-Fk-35W">
+                                                <rect key="frame" x="95.5" y="288" width="185" height="21.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jnb-4a-Ntd" customClass="MDButton">
+                                                <rect key="frame" x="94" y="325.5" width="188" height="38"/>
+                                                <color key="backgroundColor" red="0.88356136658031093" green="0.88356136658031093" blue="0.88356136658031093" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="38" id="l1n-3Y-PGa"/>
+                                                    <constraint firstAttribute="width" constant="188" id="oi2-lE-QJd"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <state key="normal" title="Continue in Flutter view">
+                                                    <color key="titleColor" red="0.35067195595854928" green="0.35067195595854928" blue="0.35067195595854928" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="type">
+                                                        <integer key="value" value="0"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="switchToFlutterView:" destination="FuD-Sm-JFt" eventType="touchUpInside" id="YwE-BA-snR"/>
+                                                </connections>
+                                            </button>
+                                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3pU-XY-D4c">
+                                                <rect key="frame" x="0.0" y="32" width="375" height="44"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                <items>
+                                                    <navigationItem title="Flutter View" id="QJX-P9-BA4"/>
+                                                </items>
+                                            </navigationBar>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c7M-Pg-nzp">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" red="0.63651635360000003" green="0.63651635360000003" blue="0.63651635360000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flutter View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qA8-dV-9sj">
+                                                <rect key="frame" x="131" y="36" width="113" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" red="0.35067195600000001" green="0.35067195600000001" blue="0.35067195600000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7nv-ZL-ntt">
+                                                <rect key="frame" x="33" y="23" width="46" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="&lt;"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="jnb-4a-Ntd" firstAttribute="centerX" secondItem="mlo-Fk-35W" secondAttribute="centerX" id="5Ml-xl-i5a"/>
+                                            <constraint firstItem="mlo-Fk-35W" firstAttribute="centerY" secondItem="2tU-yW-uTb" secondAttribute="centerY" id="c6r-HP-2F8"/>
+                                            <constraint firstItem="jnb-4a-Ntd" firstAttribute="top" secondItem="mlo-Fk-35W" secondAttribute="bottom" constant="16" id="fH2-u2-9Nd"/>
+                                            <constraint firstItem="mlo-Fk-35W" firstAttribute="centerX" secondItem="2tU-yW-uTb" secondAttribute="centerX" id="r0q-2V-dyg"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" restorationIdentifier="Bottom" translatesAutoresizingMaskIntoConstraints="NO" id="ePS-cE-aTj" userLabel="Bottom">
+                                        <rect key="frame" x="0.0" y="597" width="375" height="70"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pbr-oF-8IC">
+                                                <rect key="frame" x="20" y="14" width="47.5" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2X-Di-Qqz" customClass="MDButton">
+                                                <rect key="frame" x="303" y="-4" width="55" height="55"/>
+                                                <color key="backgroundColor" red="0.63651635362694303" green="0.63651635362694303" blue="0.63651635362694303" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="55" id="84K-Ke-pPI"/>
+                                                    <constraint firstAttribute="height" constant="55" id="U0t-W6-b2w"/>
+                                                </constraints>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="type">
+                                                        <integer key="value" value="2"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="image" keyPath="imageNormal" value="ic_add.png"/>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="rippleColor">
+                                                        <color key="value" red="0.82337594749999998" green="0.83186435940000003" blue="0.83186435940000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="handleIncrement:" destination="FuD-Sm-JFt" eventType="touchUpInside" id="CFc-RE-0UL"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="Pbr-oF-8IC" secondAttribute="bottom" constant="20" symbolic="YES" id="ITg-fk-PFN"/>
+                                            <constraint firstAttribute="bottom" secondItem="Q2X-Di-Qqz" secondAttribute="bottom" constant="19" id="ake-po-Eg7"/>
+                                            <constraint firstAttribute="height" constant="70" id="bMb-Lx-eIQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="Q2X-Di-Qqz" secondAttribute="trailing" constant="17" id="vex-no-9U3"/>
+                                            <constraint firstItem="Pbr-oF-8IC" firstAttribute="leading" secondItem="ePS-cE-aTj" secondAttribute="leading" constant="20" symbolic="YES" id="yUr-dO-wUR"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="XxV-J3-arx" secondAttribute="trailing" id="DeI-05-QJ1"/>
+                            <constraint firstAttribute="bottom" secondItem="XxV-J3-arx" secondAttribute="bottom" id="PBz-hs-2ou"/>
+                            <constraint firstItem="XxV-J3-arx" firstAttribute="leading" secondItem="rWi-Tg-SeV" secondAttribute="leading" id="S5c-6f-nGZ"/>
+                            <constraint firstItem="XxV-J3-arx" firstAttribute="top" secondItem="rWi-Tg-SeV" secondAttribute="top" id="m6A-0u-4Q9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="incrementLabel" destination="mlo-Fk-35W" id="Mqj-Jg-Vml"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gPs-4X-uKs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="972" y="-428.63568215892059"/>
         </scene>
         <!--Flutter Navigation Controller-->
         <scene sceneID="UIA-E1-Fwi">
