--- a/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
+++ b/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IZJ-mu-5dT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IZJ-mu-5dT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,15 +20,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hOR-ri-vjC">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOR-ri-vjC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Wpe-p3-33s" kind="embed" identifier="FlutterViewControllerNavigationSegue" id="E13-vs-4CQ"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hOR-ri-vjC" secondAttribute="trailing" id="1e5-Ld-Dpg"/>
+                            <constraint firstItem="hOR-ri-vjC" firstAttribute="leading" secondItem="YuB-jD-8kB" secondAttribute="leading" id="GHs-N4-OjE"/>
+                            <constraint firstItem="hOR-ri-vjC" firstAttribute="top" secondItem="YuB-jD-8kB" secondAttribute="top" id="H5V-Ez-NAg"/>
+                            <constraint firstItem="hkj-qX-zRC" firstAttribute="top" secondItem="hOR-ri-vjC" secondAttribute="bottom" id="fks-oi-0eM"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lFL-ad-Gc8"/>
                     <connections>
@@ -203,15 +208,6 @@
                     <view key="view" contentMode="scaleToFill" id="qTC-tL-MWe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YKu-xh-zGl">
-                                <rect key="frame" x="139" y="20" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -222,6 +218,7 @@
         <!--Flutter View Controller-->
         <scene sceneID="MpE-st-iOV">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ph1-lR-1Ti" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Wpe-p3-33s" customClass="FlutterViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RQW-SD-ik5"/>
@@ -233,7 +230,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ph1-lR-1Ti" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1004" y="-213"/>
         </scene>
