--- a/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
+++ b/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
@@ -60,13 +60,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3K-Ct-amG">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="334"/>
                                         <connections>
                                             <segue destination="yjl-pP-dW2" kind="embed" identifier="FlutterViewControllerSegue" id="zVC-ur-hSh"/>
                                         </connections>
                                     </containerView>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EWt-tU-lT8">
-                                        <rect key="frame" x="0.0" y="333.5" width="375" height="333.5"/>
+                                        <rect key="frame" x="0.0" y="334" width="375" height="333"/>
                                         <connections>
                                             <segue destination="g6V-0q-Qmt" kind="embed" identifier="NativeViewControllerSegue" id="TiA-wb-9xc"/>
                                         </connections>
@@ -100,7 +100,7 @@
                         <viewControllerLayoutGuide type="bottom" id="meP-7L-4EO"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jhP-0W-2HS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="334"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <navigationItem key="navigationItem" id="8Va-r4-P5B"/>
@@ -118,17 +118,17 @@
                         <viewControllerLayoutGuide type="bottom" id="H72-eC-cuN"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Lrt-2J-Mko" userLabel="ParentView">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zVI-Xh-iNx">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="334"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NLS-lx-anZ" userLabel="Top">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="264"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="263"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flutter button tapped 0 times." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ2-AA-Riy" userLabel="IncremetLabel">
-                                                <rect key="frame" x="73.5" y="122.5" width="228.5" height="20.5"/>
+                                                <rect key="frame" x="73.5" y="121.5" width="228.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -140,7 +140,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" restorationIdentifier="Bottom" translatesAutoresizingMaskIntoConstraints="NO" id="Qxj-hW-CeP" userLabel="Bottom">
-                                        <rect key="frame" x="0.0" y="264" width="375" height="70"/>
+                                        <rect key="frame" x="0.0" y="263" width="375" height="70"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0h-kv-J7E">
                                                 <rect key="frame" x="20" y="14" width="47.5" height="36"/>
@@ -218,7 +218,6 @@
         <!--Flutter View Controller-->
         <scene sceneID="MpE-st-iOV">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ph1-lR-1Ti" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Wpe-p3-33s" customClass="FlutterViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RQW-SD-ik5"/>
@@ -230,6 +229,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ph1-lR-1Ti" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1004" y="-213"/>
         </scene>
@@ -252,13 +252,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="597"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Button tapped 0 times." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mlo-Fk-35W">
-                                                <rect key="frame" x="95.5" y="288" width="185" height="21.5"/>
+                                                <rect key="frame" x="95" y="288.5" width="185" height="21.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jnb-4a-Ntd">
-                                                <rect key="frame" x="94" y="325.5" width="188" height="38"/>
+                                                <rect key="frame" x="93" y="326" width="188" height="38"/>
                                                 <color key="backgroundColor" red="0.88356136658031093" green="0.88356136658031093" blue="0.88356136658031093" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="38" id="l1n-3Y-PGa"/>
@@ -280,9 +280,8 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h5W-xy-pfQ">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flutter View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgn-l2-EVR">
-                                                        <rect key="frame" x="131" y="38" width="112" height="21"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flutter View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgn-l2-EVR">
+                                                        <rect key="frame" x="134" y="36.5" width="106" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <color key="textColor" red="0.2495344883" green="0.2495344883" blue="0.2495344883" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
@@ -290,7 +289,9 @@
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.63651635360000003" green="0.63651635360000003" blue="0.63651635360000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
+                                                    <constraint firstItem="fgn-l2-EVR" firstAttribute="centerX" secondItem="h5W-xy-pfQ" secondAttribute="centerX" id="3q7-aF-AeR"/>
                                                     <constraint firstAttribute="height" constant="76" id="TL7-7t-30D"/>
+                                                    <constraint firstItem="fgn-l2-EVR" firstAttribute="centerY" secondItem="h5W-xy-pfQ" secondAttribute="centerY" constant="10.5" id="bZD-N4-1xp"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
